[package]
name = "style_resolver"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.3.1", default-features = false, features = ["async", "tokio_rt", "serde-json"] }
napi-derive = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nodejs-resolver = "0.0.7"

[target.'cfg(all(not(all(target_os = "linux", target_arch = "aarch64", target_env = "musl"))))'.dependencies]
mimalloc-rust = { version = "0.1" }

[build-dependencies]
napi-build = "1"
